--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Minesweeper GA</title>
+  <link rel="stylesheet" href="styles/style.css">
+  <title>Document</title>
 </head>
+
+<header>
+  <h1>Minesweeper</h1>
+  <div class="buttons">
+    <button class="button" id="start">Start</button>
+    <button class="button" id="reset">Reset</button>
+  </div>
+</header>
+
 <body>
-  <h1>Hello World!</h1>
+  <main class="grid">
+
+  </main>
+  <script src="scripts/app.js"></script>
 </body>
+
 </html>
