spelling errors, polish

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h3>Sushi Selection:</h3>
         <label for="size"> <input type="radio" checked class="size" name="size" id="small"> Bento</label><br>
         <label for="size"> <input type="radio" class="size" name="size" id="medium"> Platter</label><br>
-        <label for="size"> <input type="radio" class="size" name="size" id="lage"> Banquet</label>
+        <label for="size"> <input type="radio" class="size" name="size" id="large"> Banquet</label>
         <h3>Spice Level:</h3>
         <label for="spice"><input type="radio" checked class="spice" name="spice" id="easy">Mild</label><br>
         <label for="spice"><input type="radio" class="spice" name="spice" id="normal">Medium</label><br>
