--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
       <img class="sushi-board" src="images/iso_sushi_logo.png" alt="Sushi Board">
       <small><a target="_blank"
-          href="mailto:hello@laurencewalshe.dev?subject=I Love Sushi!&body=Hello Laurence, Genius game. Are you available to discuss your next project?">hello@laurencewlashe.dev</a></small>
+          href="mailto:hello@laurencewalshe.dev?subject=I Love Sushi!&body=Hello Laurence, Genius game. Are you available to discuss your next project?">hello@laurencewalshe.dev</a></small>
     </div>
     
   </header>
